# ProtRepr

./: .gitignore  ATOM14_TESTING_COMPLETE.md  LICENSE  README.md  pyproject.toml
.cursor/rules/: data.mdc  extension-development.mdc  ref-protein-representations.mdc
docs/: architecture_update_summary.md  atom14_integration_test_report.md  atom14_requirements_completion_report.md  atom14_testing_completion_summary.md  batch_processing_refactor_summary.md  code_optimization_summary.md  frame_batch_processing_completion_report.md  frame_geometry_implementation_report.md  frame_implementation_completion_report.md  index.md  tensor_optimization_summary.md  testing_guide.md  usage.md
examples/: README.md  batch_download.sh  list_file.txt  test_prot_repr.sh
notebooks/: quickstart.ipynb
scripts/: ATOM14_README.md  ATOM14_TOOLS.md  ATOM37_README.md  ATOM37_TOOLS.md  FRAME_README.md  FRAME_TOOLS.md  README.md  batch_atom14_to_cif.py  batch_atom14_to_struct.py  batch_atom37_to_cif.py  batch_atom37_to_struct.py  batch_frame_to_cif.py  batch_frame_to_struct.py  batch_pdb_to_atom14.py  batch_pdb_to_atom37.py  batch_pdb_to_frame.py  batch_struct_to_atom14.py  batch_struct_to_atom37.py  batch_struct_to_frame.py
src/protrepr/: __init__.py
src/protrepr/batch_processing/: __init__.py  atom14_batch_converter.py  atom14_to_cif_converter.py  atom37_batch_converter.py  atom37_to_cif_converter.py  cif_to_atom37_converter.py  frame_batch_converter.py  frame_to_cif_converter.py
src/protrepr/cli/: __init__.py  atom14_to_struct.py  atom37_to_struct.py  frame_to_struct.py  struct_to_atom14.py  struct_to_atom37.py  struct_to_frame.py
src/protrepr/core/: __init__.py  atom14.py  atom37.py  frame.py
src/protrepr/representations/: __init__.py  atom14_converter.py  atom37_converter.py  base_converter.py  frame_converter.py
src/protrepr/utils/: __init__.py  geometry.py  warnings_filter.py
tests/: __init__.py  conftest.py  simple_warnings_filter.py  suppress_warnings_example.py  test_batch_processing_frame.py
tests/integration_atom14/: .gitignore  __init__.py  conftest.py  test_atom14_end_to_end.py
tests/integration_atom37/: __init__.py  test_atom37_end_to_end.py
tests/performance/: __init__.py  benchmark_atom14_performance.py  benchmark_optimized_performance.py
tests/test_converter/: __init__.py  test_basic_functionality.py  test_batch_conversion_with_cif.py
tests/test_representations/: __init__.py  test_atom14.py  test_atom14_chain_gap.py  test_atom14_cif.py  test_atom37.py  test_frame.py  test_geometr.py
