[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protrepr"
version = "0.1.0"
description = "基于ProteinTensor的蛋白质表示学习框架，专注于深度学习应用"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "ProtRepr Team"},
]
keywords = ["protein", "deep-learning", "pytorch", "structure", "representation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.8"
dependencies = [
    "protein-tensor @ git+ssh://git@github.com/a-green-hand-jack/ProteinTensor.git",
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.6.0",
    "plotly>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/a-green-hand-jack/ProtRepr"
Documentation = "https://protrepr.readthedocs.io"
Repository = "https://github.com/a-green-hand-jack/ProtRepr.git"
Issues = "https://github.com/a-green-hand-jack/ProtRepr/issues"

[project.scripts]
# 结构文件到表示格式转换工具
protrepr-struct-to-atom14 = "protrepr.cli.struct_to_atom14:main"
protrepr-struct-to-atom37 = "protrepr.cli.struct_to_atom37:main"
protrepr-struct-to-frame = "protrepr.cli.struct_to_frame:main"

# 表示格式到结构文件转换工具
protrepr-atom14-to-struct = "protrepr.cli.atom14_to_struct:main"
protrepr-atom37-to-struct = "protrepr.cli.atom37_to_struct:main"
protrepr-frame-to-struct = "protrepr.cli.frame_to_struct:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/protrepr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/protrepr",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["protrepr"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["protein_tensor.*"]
ignore_missing_imports = true 